# LibrePythonista_PyEditor

./: .gitignore  README.md  com.github.amourspirit.librepythonista.PyEditor.yml  cspell.json  hello.py  io.github.amourspirit.LibrePythonista_PyEditor.yml  io.github.amourspirit.librepythonista.PyEditor.yml  pyproject.toml  requirements.txt
.github/workflows/: flatpak_py_editor.yml  flatpak_py_editor_release.yml
dev/: README.md
misc/: io.github.amourspirit.LibrePythonista_PyEditor.metainfo.xml
repo/: summary  summary.idx
repo/refs/heads/app/com.github.amourspirit.librepythonista.PyEditor/x86_64/: master
repo/refs/heads/app/io.github.amourspirit.librepythonista.PyEditor/x86_64/: master
repo/refs/heads/runtime/com.github.amourspirit.librepythonista.PyEditor.Debug/x86_64/: master
repo/refs/heads/runtime/io.github.amourspirit.librepythonista.PyEditor.Debug/x86_64/: master
repo/summaries/: 31ab1d96a0c510bea710b244fc30a54515575a9f079ac342e1761889fa15d98e-089a050d009da245ab4e784a201cd614543c7ef832318de668b5216ae8762732.delta  3497d08619c1bb806ea540e47cd971e7bfaea298c4e8542257fd67b2c7465ada-089a050d009da245ab4e784a201cd614543c7ef832318de668b5216ae8762732.delta  3f2593af64cd57ffd2116dccbb7d5b68d45f79b9556cdfa96c9c95696b2eeb5c-089a050d009da245ab4e784a201cd614543c7ef832318de668b5216ae8762732.delta  ad473d9997fb1eb4b1c3658d540fc7ee3b7998b9cf85301f4820b9e9a9bcba90-089a050d009da245ab4e784a201cd614543c7ef832318de668b5216ae8762732.delta  e4d22e50afb6c4da06434c45539fb170d9b96d4b7e00d51ee1f9488771b52ade-089a050d009da245ab4e784a201cd614543c7ef832318de668b5216ae8762732.delta
