[project]
name = "LibrePythonista_PyEditor"
version = "0.1.2"
description = "LibrePythonista Python Editor"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = ":Barry-Thomas-Paul: Moss", email = "bigbytetech@gmail.com"}
]
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Homepage = "https://github.com/Amourspirit/io.github.amourspirit.librepythonista.PyEditor"
Repository = "https://github.com/Amourspirit/io.github.amourspirit.librepythonista.PyEditor"
Issues = "https://github.com/Amourspirit/io.github.amourspirit.librepythonista.PyEditor/issues"

[dependency-groups]
dev = [
    "flatpak-pip-generator>=24.0.0",
]
